--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -338,12 +338,238 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Convert DEM to gpkg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dem = gpd.read_file(\"data/MNT/3_SUPPLEMENTS_LIVRAISON_2020-10-00379/RGEALTI_MNT_1M_ASC_LAMB93_IGN69_FXX_20201028\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dem_select = dem.cx[1023500:1027250, 6281250:6284500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NOM_DALLE</th>\n",
+       "      <th>SRC</th>\n",
+       "      <th>SRV</th>\n",
+       "      <th>DATE_DEBUT</th>\n",
+       "      <th>DATE_FIN</th>\n",
+       "      <th>PARTENAIRE</th>\n",
+       "      <th>LITTO3D</th>\n",
+       "      <th>PAS</th>\n",
+       "      <th>CAPTEUR</th>\n",
+       "      <th>Z_MIN</th>\n",
+       "      <th>Z_MAX</th>\n",
+       "      <th>NB_CORREL</th>\n",
+       "      <th>NB_LIDAR_T</th>\n",
+       "      <th>NB_LIDAR_B</th>\n",
+       "      <th>NB_SMF</th>\n",
+       "      <th>NB_RADAR</th>\n",
+       "      <th>NB_NODATA</th>\n",
+       "      <th>CGU</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50078</th>\n",
+       "      <td>K5/RGEALTI_FXX_1026_6283_MNT_LAMB93_IGN69</td>\n",
+       "      <td>LAMB93</td>\n",
+       "      <td>IGN69</td>\n",
+       "      <td>2007/07/10</td>\n",
+       "      <td>2012/12/12</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Non</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Multi</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>270.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Licence IGN</td>\n",
+       "      <td>POLYGON ((1026000.000 6283000.000, 1027000.000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61653</th>\n",
+       "      <td>K5/RGEALTI_FXX_1026_6284_MNT_LAMB93_IGN69</td>\n",
+       "      <td>LAMB93</td>\n",
+       "      <td>IGN69</td>\n",
+       "      <td>2007/07/10</td>\n",
+       "      <td>2012/12/12</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Non</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Multi</td>\n",
+       "      <td>113.9</td>\n",
+       "      <td>279.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Licence IGN</td>\n",
+       "      <td>POLYGON ((1026000.000 6284000.000, 1027000.000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62810</th>\n",
+       "      <td>K5/RGEALTI_FXX_1025_6283_MNT_LAMB93_IGN69</td>\n",
+       "      <td>LAMB93</td>\n",
+       "      <td>IGN69</td>\n",
+       "      <td>2007/07/10</td>\n",
+       "      <td>2012/12/12</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Non</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Multi</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>259.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Licence IGN</td>\n",
+       "      <td>POLYGON ((1025000.000 6283000.000, 1026000.000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73533</th>\n",
+       "      <td>K5/RGEALTI_FXX_1025_6282_MNT_LAMB93_IGN69</td>\n",
+       "      <td>LAMB93</td>\n",
+       "      <td>IGN69</td>\n",
+       "      <td>2012/12/10</td>\n",
+       "      <td>2012/12/12</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Oui</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ALTM31000AE-IGN</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Licence Etalab</td>\n",
+       "      <td>POLYGON ((1025000.000 6282000.000, 1026000.000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114108</th>\n",
+       "      <td>K5/RGEALTI_FXX_1027_6285_MNT_LAMB93_IGN69</td>\n",
+       "      <td>LAMB93</td>\n",
+       "      <td>IGN69</td>\n",
+       "      <td>2007/07/10</td>\n",
+       "      <td>2018/04/27</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Non</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Multi</td>\n",
+       "      <td>108.6</td>\n",
+       "      <td>249.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Licence IGN</td>\n",
+       "      <td>POLYGON ((1027000.000 6285000.000, 1028000.000...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        NOM_DALLE     SRC    SRV  DATE_DEBUT  \\\n",
+       "50078   K5/RGEALTI_FXX_1026_6283_MNT_LAMB93_IGN69  LAMB93  IGN69  2007/07/10   \n",
+       "61653   K5/RGEALTI_FXX_1026_6284_MNT_LAMB93_IGN69  LAMB93  IGN69  2007/07/10   \n",
+       "62810   K5/RGEALTI_FXX_1025_6283_MNT_LAMB93_IGN69  LAMB93  IGN69  2007/07/10   \n",
+       "73533   K5/RGEALTI_FXX_1025_6282_MNT_LAMB93_IGN69  LAMB93  IGN69  2012/12/10   \n",
+       "114108  K5/RGEALTI_FXX_1027_6285_MNT_LAMB93_IGN69  LAMB93  IGN69  2007/07/10   \n",
+       "\n",
+       "          DATE_FIN PARTENAIRE LITTO3D  PAS          CAPTEUR  Z_MIN  Z_MAX  \\\n",
+       "50078   2012/12/12         NC     Non    1            Multi   76.7  270.3   \n",
+       "61653   2012/12/12         NC     Non    1            Multi  113.9  279.0   \n",
+       "62810   2012/12/12         NC     Non    1            Multi   31.8  259.3   \n",
+       "73533   2012/12/12         NC     Oui    1  ALTM31000AE-IGN    2.8   76.7   \n",
+       "114108  2018/04/27         NC     Non    1            Multi  108.6  249.5   \n",
+       "\n",
+       "        NB_CORREL  NB_LIDAR_T  NB_LIDAR_B  NB_SMF  NB_RADAR  NB_NODATA  \\\n",
+       "50078           0     1000000           0       0         0          0   \n",
+       "61653           0     1000000           0       0         0          0   \n",
+       "62810           0     1000000           0       0         0          0   \n",
+       "73533           0     1000000           0       0         0          0   \n",
+       "114108          0     1000000           0       0         0          0   \n",
+       "\n",
+       "                   CGU                                           geometry  \n",
+       "50078      Licence IGN  POLYGON ((1026000.000 6283000.000, 1027000.000...  \n",
+       "61653      Licence IGN  POLYGON ((1026000.000 6284000.000, 1027000.000...  \n",
+       "62810      Licence IGN  POLYGON ((1025000.000 6283000.000, 1026000.000...  \n",
+       "73533   Licence Etalab  POLYGON ((1025000.000 6282000.000, 1026000.000...  \n",
+       "114108     Licence IGN  POLYGON ((1027000.000 6285000.000, 1028000.000...  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dem_select.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Saving output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,9 +579,11 @@
     "# streets_clipped.to_file(\"data/gdf_streets_clipped\")\n",
     "# parcels_clipped.to_file(\"data/gdf_parcels_clipped\")\n",
     "\n",
-    "buildings_select.to_file(\"data/select/gdf_buildings_select.gpkg\")\n",
-    "streets_select.to_file(\"data/select/gdf_streets_select.gpkg\")\n",
-    "parcels_select.to_file(\"data/select/gdf_parcels_select.gpkg\")"
+    "# buildings_select.to_file(\"data/select/gdf_buildings_select.gpkg\")\n",
+    "# streets_select.to_file(\"data/select/gdf_streets_select.gpkg\")\n",
+    "# parcels_select.to_file(\"data/select/gdf_parcels_select.gpkg\")\n",
+    "\n",
+    "dem_select.to_file(\"data/select/dem_select.gpkg\")"
    ]
   },
   {
@@ -384,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
