--- a/04_street_indicators.ipynb
+++ b/04_street_indicators.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PARAM_insee_layer_name,PARAM_insee_codes = 'samples', ['place_de_gaulle']"
+    "# PARAM_insee_layer_name,PARAM_insee_codes = 'samples', ['place_de_gaulle']"
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c1fb22e6",
    "metadata": {
     "lines_to_end_of_cell_marker": 2
@@ -113,44 +113,6 @@
     "\n",
     "PARAM_building_categories_count = 17"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "090d1b8b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The configuration (paramaters) may be centralized in final version'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display('The configuration (paramaters) may be centralized in final version')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2cb25856",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs_cache = kinaxia.urbaspace.caches.FileSystemCache(config['urbaspace']['path_to_caches'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c65abe9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -173,14 +135,6 @@
     "    display(f'{len(df_sightlines)} roads')\n",
     "    return df_sightlines"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8a688ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -781,56 +735,6 @@
     "    fs_cache.dataframe_to_csv(df_results[df_results.N!=0],\n",
     "                          'road_indicators',f'{PARAM_insee_layer_name}_{zone_code}_road_indicators')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d4d4999",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1527e720",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a606958f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebed3ca7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c68d6d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22eb55b2",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -853,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
