--- a/04_street_indicators.ipynb
+++ b/04_street_indicators.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "93d8dd86",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "c1fb22e6",
    "metadata": {
     "lines_to_end_of_cell_marker": 2
@@ -115,25 +115,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "675c1915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sightlines = pd.read_pickle('my_results/method_1/06_alpes_maritimes_clip.pickle')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "14969120",
    "metadata": {},
    "source": [
     "# Helpers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7d20efcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_zone_sightlines(layer_name,\n",
-    "                              layer_code):\n",
-    "    df_sightlines = fs_cache.load_pickle('road_sightlines',f'{layer_name}_{layer_code}_sightlines_dataframe')\n",
-    "    display(f'{len(df_sightlines)} roads')\n",
-    "    return df_sightlines"
    ]
   },
   {
