Comment out pickle save

--- a/04_street_indicators.ipynb
+++ b/04_street_indicators.ipynb
@@ -711,11 +711,12 @@
     "del df_prevalences\n",
     "gc.collect()\n",
     "print(f'Export zone indicators {zone_code} as PICKLE')\n",
-    "fs_cache.save_to_pickle(df_results,output_theme,output_name,\n",
-    "                    verbose=display)\n",
-    "print(f'Export zone indicators {zone_code} as CSV')\n",
-    "fs_cache.dataframe_to_csv(df_results[df_results.N!=0],\n",
-    "                      'road_indicators',f'{PARAM_insee_layer_name}_{zone_code}_road_indicators')"
+    "\n",
+    "# fs_cache.save_to_pickle(df_results,output_theme,output_name,\n",
+    "#                     verbose=display)\n",
+    "# print(f'Export zone indicators {zone_code} as CSV')\n",
+    "# fs_cache.dataframe_to_csv(df_results[df_results.N!=0],\n",
+    "#                       'road_indicators',f'{PARAM_insee_layer_name}_{zone_code}_road_indicators')"
    ]
   }
  ],
