Remove progress bs

--- a/04_street_indicators.ipynb
+++ b/04_street_indicators.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "39c71035",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "d8c21c8c",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "fb6428c3",
    "metadata": {},
    "outputs": [],
@@ -244,15 +244,9 @@
     "\n",
     "    nb_proceed = 0\n",
     "\n",
-    "    progress_step = 100 \n",
-    "    progress = ProgressBar(nb_streets//progress_step)\n",
-    "\n",
     "    #for street_uid, row in df_sightlines.loc[[74333382]].iterrows():\n",
     "    for street_uid, row in df_sightlines.iterrows():\n",
     "        nb_proceed+=1\n",
-    "\n",
-    "        if nb_proceed%progress_step ==0:\n",
-    "            progress.progress_step(f'{nb_proceed}/{nb_streets} items proceed')\n",
     "\n",
     "        street_length = row.street_length\n",
     "\n",
@@ -591,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f064fa6f",
    "metadata": {},
    "outputs": [],
@@ -616,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "1cfa8a0c",
    "metadata": {
     "lines_to_next_cell": 2
@@ -674,16 +668,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "a3d6ca59",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=======================\n",
-      "Zone already computed place_de_gaulle\n"
+     "ename": "NameError",
+     "evalue": "name 'ProgressBar' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_indicators\u001b[38;5;241m=\u001b[39m\u001b[43mcompute_street_indicators\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_sightlines\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m df_prevalences\u001b[38;5;241m=\u001b[39mcompute_prevalences(df_sightlines)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Primary global indictaors\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[16], line 8\u001b[0m, in \u001b[0;36mcompute_street_indicators\u001b[0;34m(df_sightlines)\u001b[0m\n\u001b[1;32m      5\u001b[0m nb_proceed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      7\u001b[0m progress_step \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m \n\u001b[0;32m----> 8\u001b[0m progress \u001b[38;5;241m=\u001b[39m \u001b[43mProgressBar\u001b[49m(nb_streets\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mprogress_step)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#for street_uid, row in df_sightlines.loc[[74333382]].iterrows():\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m street_uid, row \u001b[38;5;129;01min\u001b[39;00m df_sightlines\u001b[38;5;241m.\u001b[39miterrows():\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ProgressBar' is not defined"
      ]
     }
    ],
