Main loop cleanup

--- a/04_street_indicators.ipynb
+++ b/04_street_indicators.ipynb
@@ -656,29 +656,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "a3d6ca59",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2024-07-09 16:40:02.542450 DONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "ename": "NameError",
-     "evalue": "name 'ProgressBar' is not defined",
+     "evalue": "name 'df_sightlines' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m df_indicators\u001b[38;5;241m=\u001b[39mcompute_street_indicators(df_sightlines)\n\u001b[0;32m----> 2\u001b[0m df_prevalences\u001b[38;5;241m=\u001b[39m\u001b[43mcompute_prevalences\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_sightlines\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Primary global indictaors\u001b[39;00m\n\u001b[1;32m      5\u001b[0m df_results \u001b[38;5;241m=\u001b[39m df_sightlines[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnodes_degree_1\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      6\u001b[0m                             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnodes_degree_4\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      7\u001b[0m                             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnodes_degree_3_5_plus\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      8\u001b[0m                             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstreet_length\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      9\u001b[0m                             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwindingness\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mcopy()\n",
-      "Cell \u001b[0;32mIn[18], line 7\u001b[0m, in \u001b[0;36mcompute_prevalences\u001b[0;34m(df_sighlines)\u001b[0m\n\u001b[1;32m      5\u001b[0m nb_proceed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      6\u001b[0m progress_step\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[0;32m----> 7\u001b[0m progress \u001b[38;5;241m=\u001b[39m \u001b[43mProgressBar\u001b[49m(nb_streets\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mprogress_step)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m street_uid, row \u001b[38;5;129;01min\u001b[39;00m df_sightlines\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m     10\u001b[0m     nb_proceed\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ProgressBar' is not defined"
+      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_indicators\u001b[38;5;241m=\u001b[39mcompute_street_indicators(\u001b[43mdf_sightlines\u001b[49m)\n\u001b[1;32m      2\u001b[0m df_prevalences\u001b[38;5;241m=\u001b[39mcompute_prevalences(df_sightlines)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Primary global indictaors\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_sightlines' is not defined"
      ]
     }
    ],
@@ -705,7 +695,6 @@
     "del df_sightlines\n",
     "del df_prevalences\n",
     "gc.collect()\n",
-    "print(f'Export zone indicators {zone_code} as PICKLE')\n",
     "\n",
     "# fs_cache.save_to_pickle(df_results,output_theme,output_name,\n",
     "#                     verbose=display)\n",
