--- a/01_street_sightlines.ipynb
+++ b/01_street_sightlines.ipynb
@@ -20,38 +20,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys; sys.path.append('..')\n",
-    "import datetime\n",
     "import math\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import sklearn\n",
     "import gc\n",
     "import numpy as np\n",
-    "import toml\n",
-    "import os \n",
     "import time\n",
     "import geopandas as gpd\n",
-    "import gc\n",
     "import seaborn as sns\n",
     "import rtree\n",
     "\n",
     "from rtree import index as rtree_index\n",
-    "from shapely.ops import unary_union\n",
     "from shapely.geometry import Point,Polygon,MultiPoint,MultiLineString,LineString,box\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "from datetime import datetime as dt\n",
-    "from ipywidgets import HTML\n",
-    "\n",
-    "\n",
-    "## Kinaxia closed-source libraries\n",
-    "\n",
-    "# from kinaxia.utils import ProgressBar\n",
-    "# import kinaxia.urbaspace.caches\n",
-    "# from kinaxia.datasets.postgis import *\n",
-    "# from kinaxia.geometry import *\n",
-    "# import kinaxia.constants as constants\n",
-    "# from kinaxia.urbaspace.sightlines import *"
+    "from ipywidgets import HTML"
    ]
   },
   {
