--- a/02_sightlines_plot.ipynb
+++ b/02_sightlines_plot.ipynb
@@ -20,38 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys; sys.path.append('..')\n",
-    "import datetime\n",
     "import math\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import time\n",
     "import geopandas as gpd\n",
-    "import gc\n",
-    "import seaborn as sns\n",
-    "import gc\n",
     "import numpy as np\n",
-    "import toml\n",
-    "import os \n",
-    "import sklearn\n",
-    "import pickle\n",
     "import rtree\n",
-    "import shapely\n",
     "\n",
     "from rtree import index as rtree_index\n",
     "from shapely.ops import unary_union\n",
-    "from shapely.geometry import Point,Polygon,MultiPoint,MultiLineString,LineString,box\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "from datetime import datetime as dt\n",
-    "\n",
-    "\n",
-    "## Closed-source\n",
-    "\n",
-    "# from kinaxia.utils import ProgressBar\n",
-    "# import kinaxia.urbaspace.caches\n",
-    "# from kinaxia.datasets.postgis import *\n",
-    "# from kinaxia.geometry import *\n",
-    "# import kinaxia.constants as constants"
+    "from shapely.geometry import Point,Polygon,MultiPoint,MultiLineString,LineString,box"
    ]
   },
   {
@@ -957,7 +935,7 @@
     "                  \n",
     "    gdf_sight_lines = gpd.GeoDataFrame(values,columns=['geometry','point_id','sight_type'])\n",
     " \n",
-    "    geom_bounds = shapely.ops.unary_union(gdf_sight_lines.geometry).buffer(5).exterior\n",
+    "    geom_bounds = unary_union(gdf_sight_lines.geometry).buffer(5).exterior\n",
     "    \n",
     "    gdf_items = gdf_parcels.iloc[rtree_parcels.extract_ids(geom_bounds)]\n",
     "    \n",
