--- a/04_street_indicators.ipynb
+++ b/04_street_indicators.ipynb
@@ -20,35 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys; sys.path.append('..')\n",
-    "import datetime\n",
     "import math\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import gc\n",
     "import numpy as np\n",
-    "import toml\n",
-    "import os \n",
-    "import sklearn\n",
-    "import time\n",
     "import geopandas as gpd\n",
-    "import gc\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from rtree import index as rtree_index\n",
-    "from shapely.ops import unary_union\n",
-    "from datetime import datetime as dt\n",
-    "from shapely.geometry import Point,Polygon,MultiPoint,MultiLineString,LineString,box\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "\n",
-    "\n",
-    "## Closed-source\n",
-    "\n",
-    "# from kinaxia.utils import ProgressBar\n",
-    "# import kinaxia.urbaspace.caches\n",
-    "# from kinaxia.datasets.postgis import *\n",
-    "# from kinaxia.geometry import *\n",
-    "# import kinaxia.constants as constants"
+    "import gc"
    ]
   },
   {
@@ -544,8 +520,6 @@
     "                      ind_left_built_coverage, ind_right_built_coverage, ind_built_coverage\n",
     "                      ])\n",
     "\n",
-    "\n",
-    "    display(f'{datetime.datetime.now()} DONE')\n",
     "    df = pd.DataFrame(values,columns=['uid',\n",
     "                                      'N','n_l','n_r',\n",
     "                                      'left_OS','right_OS', 'OS',\n",
