03 Cleanup unused imports

--- a/03_sightlines_DEM.ipynb
+++ b/03_sightlines_DEM.ipynb
@@ -25,19 +25,7 @@
     "from shapely.geometry import Point\n",
     "from zipfile import ZipFile\n",
     "from shapely.ops import unary_union\n",
-    "from rtree import index as rtree_index\n",
-    "\n",
-    "\n",
-    "## Closed-source\n",
-    "\n",
-    "# from kinaxia.datasets.postgis import *\n",
-    "# from kinaxia.geometry import *\n",
-    "# import kinaxia.constants as constants\n",
-    "# from kinaxia.utils import ProgressBar\n",
-    "# from kinaxia.datasets.postgis import *\n",
-    "# from kinaxia.geometry import *\n",
-    "# import kinaxia.constants as constants\n",
-    "# import kinaxia.urbaspace.caches"
+    "from rtree import index as rtree_index"
    ]
   },
   {
