--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -7,9 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rasterio\n",
-    "import xvec\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import rioxarray\n",
+    "import math\n",
+    "import shapely\n",
+    "\n",
+    "from shapely.geometry import Point, MultiPoint"
    ]
   },
   {
