03 Convert tuples to geometries

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -26,6 +26,41 @@
     "sightlines = pd.read_pickle(\"my_results/method_1/d06_sightlines_geometries.pickle\")\n",
     "sightlines = sightlines[[\"start_point\", \"end_point\", \"sight_line_points\"]]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0523e664",
+   "metadata": {},
+   "source": [
+    "# Convert tuples with coordinates to shapely geometry\n",
+    "Should eventually be deprecated by already using shapely geometries\n",
+    "in the first place."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa705303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_point(row):\n",
+    "    return Point(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d467e829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_multipoint(row):\n",
+    "    if row:\n",
+    "        return MultiPoint(row)\n",
+    "    else:\n",
+    "        return None"
+   ]
   }
  ],
  "metadata": {
