--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99bcb5f8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0a21db39",
    "metadata": {},
    "outputs": [],
@@ -61,6 +61,24 @@
     "    else:\n",
     "        return None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28ee0a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert start and end point to geometry\n",
+    "tuple_columns = [\"start_point\", \"end_point\"]\n",
+    "\n",
+    "for col in tuple_columns:\n",
+    "    sightlines[col+\"_geom\"] = sightlines[col].apply(convert_to_point)\n",
+    "\n",
+    "\n",
+    "# Convert sight line points to geometry\n",
+    "sightlines[\"sl_points\"] = sightlines[\"sight_line_points\"].apply(convert_to_multipoint)"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
