03 Load raster data

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -79,6 +79,25 @@
     "# Convert sight line points to geometry\n",
     "sightlines[\"sl_points\"] = sightlines[\"sight_line_points\"].apply(convert_to_multipoint)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc0ba283",
+   "metadata": {},
+   "source": [
+    "# Load raster dtm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6e743be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raster = rioxarray.open_rasterio(\"data/dtm/dtm_raw/RGEALTI_FXX_1025_6285_MNT_LAMB93_IGN69.asc\")\n",
+    "raster = raster.drop_vars(\"band\").squeeze()"
+   ]
   }
  ],
  "metadata": {
