--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "99bcb5f8",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "import rioxarray\n",
     "import math\n",
     "import shapely\n",
+    "import xvec\n",
     "\n",
     "from shapely.geometry import Point, MultiPoint"
    ]
