--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "99bcb5f8",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a21db39",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa705303",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d467e829",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e28ee0a0",
    "metadata": {},
    "outputs": [],
@@ -91,13 +91,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f6e743be",
    "metadata": {},
    "outputs": [],
    "source": [
     "raster = rioxarray.open_rasterio(\"data/dtm/dtm_raw/RGEALTI_FXX_1025_6285_MNT_LAMB93_IGN69.asc\")\n",
     "raster = raster.drop_vars(\"band\").squeeze()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51d28053",
+   "metadata": {},
+   "source": [
+    "# Extract z coordinates from raster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c203ee34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract z coords from raster\n",
+    "z_start = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=sightlines[\"start_point_geom\"], x_coords=\"x\",y_coords=\"y\")\n",
+    "\n",
+    "# Extract z coords from raster\n",
+    "z_end = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=sightlines[\"end_point_geom\"], x_coords=\"x\",y_coords=\"y\")"
    ]
   }
  ],
