--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -121,6 +121,38 @@
     "# Extract z coords from raster\n",
     "z_end = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=sightlines[\"end_point_geom\"], x_coords=\"x\",y_coords=\"y\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f119e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "# This is waayy to complicated. Should be reworked\n",
+    "\n",
+    "new_gdf = gpd.GeoDataFrame(columns=['geometry'], geometry='geometry')\n",
+    "\n",
+    "for row in sightlines[\"sight_line_points_geom\"]:\n",
+    "    if row is not None:\n",
+    "        points = row.geoms\n",
+    "        \n",
+    "        z_points = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=points, x_coords=\"x\",y_coords=\"y\")\n",
+    "        z_points = z_points.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
+    "\n",
+    "        z_points[\"geometry\"] = z_points.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
+    "        z_points = z_points.drop(columns=\"z\")\n",
+    "        \n",
+    "        multipoint = MultiPoint(z_points[\"geometry\"].tolist())\n",
+    "        \n",
+    "        row_gdf = gpd.GeoDataFrame({'geometry': [multipoint]}, geometry='geometry')\n",
+    "\n",
+    "        new_gdf = pd.concat([new_gdf, row_gdf], ignore_index=True)\n",
+    "    else:\n",
+    "        new_row = gpd.GeoDataFrame({'geometry': [None]}, geometry='geometry')\n",
+    "        new_gdf = pd.concat([new_gdf, new_row], ignore_index=True)"
+   ]
   }
  ],
  "metadata": {
