03 Put extracted z coords together

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -153,6 +153,60 @@
     "        new_row = gpd.GeoDataFrame({'geometry': [None]}, geometry='geometry')\n",
     "        new_gdf = pd.concat([new_gdf, new_row], ignore_index=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f3a110e",
+   "metadata": {},
+   "source": [
+    "## Put results together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf9ced4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert do gpd\n",
+    "z_start = z_start.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
+    "\n",
+    "# Append z values to points\n",
+    "z_start[\"start_point_3d\"] = z_start.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
+    "z_start = z_start.drop(columns=[\"geometry\", \"z\"])\n",
+    "\n",
+    "# Convert do gpd\n",
+    "z_end = z_end.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
+    "\n",
+    "# Append z values to points\n",
+    "z_end[\"end_point_3d\"] = z_end.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
+    "z_end = z_end.drop(columns=[\"geometry\", \"z\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8f8ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sightlines = pd.concat([z_start, z_end, new_gdf], axis=1)\n",
+    "\n",
+    "sightlines = sightlines.rename(columns={\"start_point_3d\": \"sl_start\",\n",
+    "                                          \"end_point_3d\": \"sl_end\",\n",
+    "                                          \"geometry\": \"sl_points\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415b6fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sightlines"
+   ]
   }
  ],
  "metadata": {
