03 Introduce compute_slope function

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -207,6 +207,65 @@
    "source": [
     "sightlines"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf47ff54",
+   "metadata": {},
+   "source": [
+    "# Compute slope\n",
+    "Finally, yaaay."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de597a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_slope(road_row):\n",
+    "    \n",
+    "    start = road_row.sl_start\n",
+    "    end = road_row.sl_end\n",
+    "    slp = road_row.sl_points\n",
+    "\n",
+    "    if slp == None:\n",
+    "        slope_percent = abs(start.z - end.z) / shapely.distance(start, end)\n",
+    "        slope_degree = math.degrees(math.atan(slope_percent))\n",
+    "\n",
+    "        return slope_percent, slope_degree\n",
+    "    \n",
+    "    slp_list = [p for p in slp.geoms]\n",
+    "\n",
+    "    points = []\n",
+    "\n",
+    "    points.append(start)\n",
+    "    for p in slp_list:\n",
+    "        points.append(p)\n",
+    "    points.append(end)\n",
+    "\n",
+    "    # number of points\n",
+    "    nb_points = len([start]) + len([end]) + len(slp_list)\n",
+    "    sum_slope_percent = 0\n",
+    "    sum_slope_radian = 0\n",
+    "    sum_nb_points = 0\n",
+    "    # if theres one or more sl_point\n",
+    "    for i in range (1, nb_points-1):\n",
+    "        a = points[i-1]\n",
+    "        b = points[i+1]\n",
+    "            \n",
+    "        sum_nb_points += 1\n",
+    "        inter_slope_percent = abs(a.z - b.z) / shapely.distance(a, b)\n",
+    "\n",
+    "        sum_slope_percent += inter_slope_percent\n",
+    "        sum_slope_radian += math.atan(inter_slope_percent)\n",
+    "        \n",
+    "    slope_percent = sum_slope_percent/sum_nb_points\n",
+    "    slope_degree = math.degrees(sum_slope_radian/sum_nb_points)\n",
+    "\n",
+    "    return slope_degree, slope_percent"
+   ]
   }
  ],
  "metadata": {
