--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -213,7 +213,7 @@
    "id": "cf47ff54",
    "metadata": {},
    "source": [
-    "# Compute slope\n",
+    "# Compute slope function\n",
     "Finally, yaaay."
    ]
   },
@@ -265,6 +265,47 @@
     "    slope_degree = math.degrees(sum_slope_radian/sum_nb_points)\n",
     "\n",
     "    return slope_degree, slope_percent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "246d682e",
+   "metadata": {},
+   "source": [
+    "# Compute results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "563729ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slope_values = []\n",
+    "\n",
+    "for _, road_row in sightlines.iterrows():\n",
+    "\n",
+    "    # display([p for p in road_row.sl_points.geoms])\n",
+    "    # break\n",
+    "\n",
+    "    slope_degree, slope_percent = compute_slope(road_row)\n",
+    "\n",
+    "    slope_values.append([slope_degree, slope_percent])\n",
+    "\n",
+    "    df_slopes = pd.DataFrame(slope_values,\n",
+    "                             columns=[\"slope_degree\",\n",
+    "                                      \"slope_percent\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb51854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_slopes"
    ]
   }
  ],
