--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8f119e3c",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
     "\n",
     "new_gdf = gpd.GeoDataFrame(columns=['geometry'], geometry='geometry')\n",
     "\n",
-    "for row in sightlines[\"sight_line_points_geom\"]:\n",
+    "for row in sightlines[\"sl_points\"]:\n",
     "    if row is not None:\n",
     "        points = row.geoms\n",
     "        \n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cf9ced4d",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2f8f8ff1",
    "metadata": {},
    "outputs": [],
@@ -200,10 +200,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "415b6fe2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sl_start</th>\n",
+       "      <th>sl_end</th>\n",
+       "      <th>sl_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POINT Z (1025242.3 6281649.6 23.08)</td>\n",
+       "      <td>POINT Z (1025315.3 6281625.6 24.3)</td>\n",
+       "      <td>MULTIPOINT Z ((1025242.675 6281649.27 23.39), ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POINT Z (1025177.5 6281541.1 20.18)</td>\n",
+       "      <td>POINT Z (1025169 6281448.7 21.75)</td>\n",
+       "      <td>MULTIPOINT Z ((1025177.597 6281540.609 20.18),...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>POINT Z (1025424.8 6281581.9 30.91)</td>\n",
+       "      <td>POINT Z (1025442.8 6281622 33.38)</td>\n",
+       "      <td>MULTIPOINT Z ((1025425.005 6281582.356 30.91),...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POINT Z (1025476 6281507.8 33.53)</td>\n",
+       "      <td>POINT Z (1025538.1 6281459.3 37.83)</td>\n",
+       "      <td>MULTIPOINT Z ((1025475.934 6281507.304 33.53),...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>POINT Z (1025216 6281670.9 21.13)</td>\n",
+       "      <td>POINT Z (1025187.8 6281695.8 21.19)</td>\n",
+       "      <td>MULTIPOINT Z ((1025215.613 6281671.217 21.13),...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2162</th>\n",
+       "      <td>POINT Z (1023809.4 6283978.1 168.65)</td>\n",
+       "      <td>POINT Z (1023826.5 6283991.1 168.57)</td>\n",
+       "      <td>MULTIPOINT Z ((1023809.828 6283978.359 168.65)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2163</th>\n",
+       "      <td>POINT Z (1023996.4 6283819.8 179.95)</td>\n",
+       "      <td>POINT Z (1023991 6283832.7 178.71)</td>\n",
+       "      <td>MULTIPOINT Z ((1023996.284 6283820.286 179.95)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2164</th>\n",
+       "      <td>POINT Z (1024115.3 6284174.2 187.49)</td>\n",
+       "      <td>POINT Z (1024132.5 6284154 183.36)</td>\n",
+       "      <td>MULTIPOINT Z ((1024115.618 6284173.814 187.49)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2165</th>\n",
+       "      <td>POINT Z (1024139.6 6284146.3 178.36)</td>\n",
+       "      <td>POINT Z (1024213.6 6284091.4 168.23)</td>\n",
+       "      <td>MULTIPOINT Z ((1024139.947 6284145.94 178.36),...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2166</th>\n",
+       "      <td>POINT Z (1023826.5 6283991.1 168.57)</td>\n",
+       "      <td>POINT Z (1023852.9 6284060.7 167.58)</td>\n",
+       "      <td>MULTIPOINT Z ((1023826.661 6283991.573 168.57)...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2167 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  sl_start  \\\n",
+       "0      POINT Z (1025242.3 6281649.6 23.08)   \n",
+       "1      POINT Z (1025177.5 6281541.1 20.18)   \n",
+       "2      POINT Z (1025424.8 6281581.9 30.91)   \n",
+       "3        POINT Z (1025476 6281507.8 33.53)   \n",
+       "4        POINT Z (1025216 6281670.9 21.13)   \n",
+       "...                                    ...   \n",
+       "2162  POINT Z (1023809.4 6283978.1 168.65)   \n",
+       "2163  POINT Z (1023996.4 6283819.8 179.95)   \n",
+       "2164  POINT Z (1024115.3 6284174.2 187.49)   \n",
+       "2165  POINT Z (1024139.6 6284146.3 178.36)   \n",
+       "2166  POINT Z (1023826.5 6283991.1 168.57)   \n",
+       "\n",
+       "                                    sl_end  \\\n",
+       "0       POINT Z (1025315.3 6281625.6 24.3)   \n",
+       "1        POINT Z (1025169 6281448.7 21.75)   \n",
+       "2        POINT Z (1025442.8 6281622 33.38)   \n",
+       "3      POINT Z (1025538.1 6281459.3 37.83)   \n",
+       "4      POINT Z (1025187.8 6281695.8 21.19)   \n",
+       "...                                    ...   \n",
+       "2162  POINT Z (1023826.5 6283991.1 168.57)   \n",
+       "2163    POINT Z (1023991 6283832.7 178.71)   \n",
+       "2164    POINT Z (1024132.5 6284154 183.36)   \n",
+       "2165  POINT Z (1024213.6 6284091.4 168.23)   \n",
+       "2166  POINT Z (1023852.9 6284060.7 167.58)   \n",
+       "\n",
+       "                                              sl_points  \n",
+       "0     MULTIPOINT Z ((1025242.675 6281649.27 23.39), ...  \n",
+       "1     MULTIPOINT Z ((1025177.597 6281540.609 20.18),...  \n",
+       "2     MULTIPOINT Z ((1025425.005 6281582.356 30.91),...  \n",
+       "3     MULTIPOINT Z ((1025475.934 6281507.304 33.53),...  \n",
+       "4     MULTIPOINT Z ((1025215.613 6281671.217 21.13),...  \n",
+       "...                                                 ...  \n",
+       "2162  MULTIPOINT Z ((1023809.828 6283978.359 168.65)...  \n",
+       "2163  MULTIPOINT Z ((1023996.284 6283820.286 179.95)...  \n",
+       "2164  MULTIPOINT Z ((1024115.618 6284173.814 187.49)...  \n",
+       "2165  MULTIPOINT Z ((1024139.947 6284145.94 178.36),...  \n",
+       "2166  MULTIPOINT Z ((1023826.661 6283991.573 168.57)...  \n",
+       "\n",
+       "[2167 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sightlines"
    ]
@@ -219,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "de597a50",
    "metadata": {},
    "outputs": [],
@@ -277,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "563729ab",
    "metadata": {},
    "outputs": [],
@@ -300,10 +446,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3fb51854",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>slope_degree</th>\n",
+       "      <th>slope_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.305050</td>\n",
+       "      <td>0.040300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.094379</td>\n",
+       "      <td>0.019111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.159987</td>\n",
+       "      <td>0.055233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.404723</td>\n",
+       "      <td>0.042030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.878624</td>\n",
+       "      <td>0.015341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2162</th>\n",
+       "      <td>0.284191</td>\n",
+       "      <td>0.004960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2163</th>\n",
+       "      <td>4.664951</td>\n",
+       "      <td>0.081627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2164</th>\n",
+       "      <td>9.312918</td>\n",
+       "      <td>0.166963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2165</th>\n",
+       "      <td>6.194412</td>\n",
+       "      <td>0.109414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2166</th>\n",
+       "      <td>7.294105</td>\n",
+       "      <td>0.132081</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2167 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      slope_degree  slope_percent\n",
+       "0         2.305050       0.040300\n",
+       "1         1.094379       0.019111\n",
+       "2         3.159987       0.055233\n",
+       "3         2.404723       0.042030\n",
+       "4         0.878624       0.015341\n",
+       "...            ...            ...\n",
+       "2162      0.284191       0.004960\n",
+       "2163      4.664951       0.081627\n",
+       "2164      9.312918       0.166963\n",
+       "2165      6.194412       0.109414\n",
+       "2166      7.294105       0.132081\n",
+       "\n",
+       "[2167 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_slopes"
    ]
