03 Add NODATA constant

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -365,13 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "de597a50",
    "metadata": {},
    "outputs": [],
    "source": [
+    "NODATA_RASTER = raster.rio.nodata\n",
+    "\n",
     "def compute_slope(road_row):\n",
-    "    \n",
     "    start = road_row.sl_start\n",
     "    end = road_row.sl_end\n",
     "    slp = road_row.sl_points\n",
