--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -378,6 +378,8 @@
     "    slp = road_row.sl_points\n",
     "\n",
     "    if slp == None:\n",
+    "        # Case when there is no sight line point (e.g. when the road is too short)\n",
+    "        # just computes slope between start and end\n",
     "        slope_percent = abs(start.z - end.z) / shapely.distance(start, end)\n",
     "        slope_degree = math.degrees(math.atan(slope_percent))\n",
     "\n",
@@ -394,10 +396,13 @@
     "\n",
     "    # number of points\n",
     "    nb_points = len([start]) + len([end]) + len(slp_list)\n",
+    "\n",
+    "    # temporary variables to store inter slope values\n",
     "    sum_slope_percent = 0\n",
     "    sum_slope_radian = 0\n",
     "    sum_nb_points = 0\n",
-    "    # if theres one or more sl_point\n",
+    "\n",
+    "    # if theres one or more sight line point\n",
     "    for i in range (1, nb_points-1):\n",
     "        a = points[i-1]\n",
     "        b = points[i+1]\n",
@@ -408,6 +413,7 @@
     "        sum_slope_percent += inter_slope_percent\n",
     "        sum_slope_radian += math.atan(inter_slope_percent)\n",
     "        \n",
+    "    # compute mean of inter slopes\n",
     "    slope_percent = sum_slope_percent/sum_nb_points\n",
     "    slope_degree = math.degrees(sum_slope_radian/sum_nb_points)\n",
     "\n",
