--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -373,9 +373,9 @@
     "NODATA_RASTER = raster.rio.nodata\n",
     "\n",
     "def compute_slope(road_row):\n",
-    "    start = road_row.sl_start\n",
-    "    end = road_row.sl_end\n",
-    "    slp = road_row.sl_points\n",
+    "    start = road_row.sl_start   # Point z\n",
+    "    end = road_row.sl_end       # Point z\n",
+    "    slp = road_row.sl_points    # Multipoint z\n",
     "\n",
     "    if slp == None:\n",
     "        # Case when there is no sight line point (e.g. when the road is too short)\n",
@@ -385,11 +385,13 @@
     "\n",
     "        return slope_percent, slope_degree\n",
     "    \n",
+    "    # From Multipoint z to Point z list\n",
     "    slp_list = [p for p in slp.geoms]\n",
     "\n",
     "    points = []\n",
     "\n",
     "    points.append(start)\n",
+    "    # From Point z list to all points list\n",
     "    for p in slp_list:\n",
     "        points.append(p)\n",
     "    points.append(end)\n",
