--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "de597a50",
    "metadata": {},
    "outputs": [],
@@ -380,6 +380,9 @@
     "    if slp == None:\n",
     "        # Case when there is no sight line point (e.g. when the road is too short)\n",
     "        # just computes slope between start and end\n",
+    "        if start.z == NODATA_RASTER or end.z == NODATA_RASTER:\n",
+    "            # Case when there is at least one invalid z coord\n",
+    "            return 0, 0\n",
     "        slope_percent = abs(start.z - end.z) / shapely.distance(start, end)\n",
     "        slope_degree = math.degrees(math.atan(slope_percent))\n",
     "\n",
@@ -404,7 +407,7 @@
     "    sum_slope_radian = 0\n",
     "    sum_nb_points = 0\n",
     "\n",
-    "    # if theres one or more sight line point\n",
+    "    # if there is one or more sight line points\n",
     "    for i in range (1, nb_points-1):\n",
     "        a = points[i-1]\n",
     "        b = points[i+1]\n",
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "563729ab",
    "metadata": {},
    "outputs": [],
