03 Check invalid z coord in slpoint

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -411,6 +411,10 @@
     "    for i in range (1, nb_points-1):\n",
     "        a = points[i-1]\n",
     "        b = points[i+1]\n",
+    "\n",
+    "        if a.z == NODATA_RASTER or b.z == NODATA_RASTER:\n",
+    "            # Case when there is no valid z coord in slpoint\n",
+    "            continue\n",
     "            \n",
     "        sum_nb_points += 1\n",
     "        inter_slope_percent = abs(a.z - b.z) / shapely.distance(a, b)\n",
