03 Check for no valid z coord in any slpoint

--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -421,6 +421,11 @@
     "\n",
     "        sum_slope_percent += inter_slope_percent\n",
     "        sum_slope_radian += math.atan(inter_slope_percent)\n",
+    "\n",
+    "    if sum_nb_points == 0:\n",
+    "        # Case when no slpoint has a valid z coord\n",
+    "        # Unable to compute slope\n",
+    "        return 0, 0\n",
     "        \n",
     "    # compute mean of inter slopes\n",
     "    slope_percent = sum_slope_percent/sum_nb_points\n",
