--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "de597a50",
    "metadata": {},
    "outputs": [],
@@ -382,11 +382,11 @@
     "        # just computes slope between start and end\n",
     "        if start.z == NODATA_RASTER or end.z == NODATA_RASTER:\n",
     "            # Case when there is at least one invalid z coord\n",
-    "            return 0, 0\n",
+    "            return 0, 0, 0\n",
     "        slope_percent = abs(start.z - end.z) / shapely.distance(start, end)\n",
     "        slope_degree = math.degrees(math.atan(slope_percent))\n",
     "\n",
-    "        return slope_percent, slope_degree\n",
+    "        return slope_percent, slope_degree, 1\n",
     "    \n",
     "    # From Multipoint z to Point z list\n",
     "    slp_list = [p for p in slp.geoms]\n",
@@ -425,13 +425,13 @@
     "    if sum_nb_points == 0:\n",
     "        # Case when no slpoint has a valid z coord\n",
     "        # Unable to compute slope\n",
-    "        return 0, 0\n",
+    "        return 0, 0, 0\n",
     "        \n",
     "    # compute mean of inter slopes\n",
     "    slope_percent = sum_slope_percent/sum_nb_points\n",
     "    slope_degree = math.degrees(sum_slope_radian/sum_nb_points)\n",
     "\n",
-    "    return slope_degree, slope_percent"
+    "    return slope_degree, slope_percent, sum_nb_points"
    ]
   },
   {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "563729ab",
    "metadata": {},
    "outputs": [],
@@ -456,18 +456,19 @@
     "    # display([p for p in road_row.sl_points.geoms])\n",
     "    # break\n",
     "\n",
-    "    slope_degree, slope_percent = compute_slope(road_row)\n",
+    "    slope_degree, slope_percent, n_slopes = compute_slope(road_row)\n",
     "\n",
-    "    slope_values.append([slope_degree, slope_percent])\n",
+    "    slope_values.append([slope_degree, slope_percent, n_slopes])\n",
     "\n",
     "    df_slopes = pd.DataFrame(slope_values,\n",
     "                             columns=[\"slope_degree\",\n",
-    "                                      \"slope_percent\"])"
+    "                                      \"slope_percent\",\n",
+    "                                      \"n_slopes\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "3fb51854",
    "metadata": {},
    "outputs": [
@@ -494,6 +495,7 @@
        "      <th></th>\n",
        "      <th>slope_degree</th>\n",
        "      <th>slope_percent</th>\n",
+       "      <th>n_slopes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -501,29 +503,35 @@
        "      <th>0</th>\n",
        "      <td>2.305050</td>\n",
        "      <td>0.040300</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.094379</td>\n",
        "      <td>0.019111</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3.159987</td>\n",
        "      <td>0.055233</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2.404723</td>\n",
        "      <td>0.042030</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.878624</td>\n",
        "      <td>0.015341</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -531,50 +539,55 @@
        "      <th>2162</th>\n",
        "      <td>0.284191</td>\n",
        "      <td>0.004960</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2163</th>\n",
        "      <td>4.664951</td>\n",
        "      <td>0.081627</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2164</th>\n",
        "      <td>9.312918</td>\n",
        "      <td>0.166963</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2165</th>\n",
        "      <td>6.194412</td>\n",
        "      <td>0.109414</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2166</th>\n",
        "      <td>7.294105</td>\n",
        "      <td>0.132081</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2167 rows × 2 columns</p>\n",
+       "<p>2167 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      slope_degree  slope_percent\n",
-       "0         2.305050       0.040300\n",
-       "1         1.094379       0.019111\n",
-       "2         3.159987       0.055233\n",
-       "3         2.404723       0.042030\n",
-       "4         0.878624       0.015341\n",
-       "...            ...            ...\n",
-       "2162      0.284191       0.004960\n",
-       "2163      4.664951       0.081627\n",
-       "2164      9.312918       0.166963\n",
-       "2165      6.194412       0.109414\n",
-       "2166      7.294105       0.132081\n",
+       "      slope_degree  slope_percent  n_slopes\n",
+       "0         2.305050       0.040300        28\n",
+       "1         1.094379       0.019111        33\n",
+       "2         3.159987       0.055233        15\n",
+       "3         2.404723       0.042030        34\n",
+       "4         0.878624       0.015341        13\n",
+       "...            ...            ...       ...\n",
+       "2162      0.284191       0.004960         7\n",
+       "2163      4.664951       0.081627         5\n",
+       "2164      9.312918       0.166963         9\n",
+       "2165      6.194412       0.109414        31\n",
+       "2166      7.294105       0.132081        26\n",
        "\n",
-       "[2167 rows x 2 columns]"
+       "[2167 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
